/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */

plugins {
	id 'java-library'
	id 'eclipse'
	id 'maven-publish'
	id 'signing'
}



group 'org.ic4j'
version '0.8.5'

sourceCompatibility = 1.8
targetCompatibility = 1.8

java {
	withSourcesJar()
	withJavadocJar()
}

tasks.withType(JavaCompile).configureEach {
	if (JavaVersion.current().isJava9Compatible()) {
		options.release = 8
	}
}

repositories {
	mavenLocal()
    mavenCentral()
    flatDir {
        dirs 'libs'
    }    
}

jar {
    manifest {
        attributes('Implementation-Title': 'ic4j-codegen',
                   'Implementation-Version': project.version, 'Main-Class': 'org.ic4j.codegen.IC4J')
    } 
    
    archiveBaseName = 'ic4j-codegen'
}

configurations {
	fatJarCompileOnly {
		canBeConsumed = false
		canBeResolved = true
		extendsFrom compileOnly
	}
}

task fatJar(type: Jar) {
    manifest {
        attributes('Implementation-Title': 'ic4j-codegen',
                   'Implementation-Version': project.version, 'Main-Class': 'org.ic4j.codegen.IC4J')
    }
    
    archiveBaseName = 'ic4j-codegen-with-dependencies'

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
    from {
		(configurations.runtimeClasspath + configurations.fatJarCompileOnly)
				.collect { it.isDirectory() ? it : zipTree(it) }
	}
    with jar
}

test {
    useJUnitPlatform()
    
    exclude '**/*SwiftTest*'
    exclude '**/*RosettaNetTest*'    
}

dependencies {
	compileOnly name: 'android-31'
	compileOnly name: 'react-android-0.71.11'
	
	api group: 'org.ic4j', name: 'ic4j-reactnative', version: '0.8.0'
	api group: 'org.ic4j', name: 'ic4j-agent', version: '0.8.5'
	api group: 'org.ic4j', name: 'ic4j-candid', version: '0.8.5'
	api group: 'org.ic4j', name: 'ic4j-spring', version: '0.8.0'
	
	// https://mvnrepository.com/artifact/commons-codec/commons-codec
	implementation group: 'commons-codec', name: 'commons-codec', version: '1.21.0'
	
	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'
	
	// https://mvnrepository.com/artifact/org.springframework/spring-context
	api group: 'org.springframework', name: 'spring-context', version: '5.3.39'
	
	// Spring 5 generated services use javax.annotation.PostConstruct.
	api group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
	
	// JAXB dependencies
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'	

	// https://mvnrepository.com/artifact/com.squareup/javapoet
	api group: 'com.squareup', name: 'javapoet', version: '1.13.0'
	
	// https://mvnrepository.com/artifact/org.apache.ws.xmlschema/xmlschema-core
	implementation group: 'org.apache.ws.xmlschema', name: 'xmlschema-core', version: '2.3.2'
	
	// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
	implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.17'
	runtimeOnly group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.17'
	
	// https://mvnrepository.com/artifact/info.picocli/picocli
	implementation group: 'info.picocli', name: 'picocli', version: '4.7.7'

	// UBL 2.1 JAXB model classes
	implementation group: 'com.helger.ubl', name: 'ph-ubl21', version: '10.2.0'
	
    testImplementation name: 'android-31'
	testImplementation name: 'react-android-0.71.11'	
	
	testImplementation group: 'io.dscope', name: 'dscope-rosettanet-javax-jaxb', version: '0.0.1'
	
	testImplementation group: 'com.prowidesoftware', name: 'pw-iso20022', version: 'SRU2025-10.3.5'		
	
	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.12.2'

	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.12.2'

	// https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher
	testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.12.2'
				
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
			pom {
				name = 'IC4J Codegen'
				description = 'Java and React Native code generators for Internet Computer Candid services.'
				url = 'https://github.com/ic4j/ic4j-codegen'
				licenses {
					license {
						name = 'The Apache License, Version 2.0'
						url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
					}
				}
				developers {
					developer {
						id = 'ic4j'
						name = 'IC4J contributors'
					}
				}
				scm {
					connection = 'scm:git:https://github.com/ic4j/ic4j-codegen.git'
					developerConnection = 'scm:git:ssh://git@github.com/ic4j/ic4j-codegen.git'
					url = 'https://github.com/ic4j/ic4j-codegen'
				}
			}
		}
	}
	repositories {
		if (providers.gradleProperty('releaseRepositoryUrl').isPresent()) {
			maven {
				name = 'release'
				url = uri(providers.gradleProperty('releaseRepositoryUrl').get())
				credentials {
					username = providers.gradleProperty('releaseRepositoryUsername')
							.orElse(providers.environmentVariable('CENTRAL_PORTAL_USERNAME')).getOrElse('')
					password = providers.gradleProperty('releaseRepositoryPassword')
							.orElse(providers.environmentVariable('CENTRAL_PORTAL_PASSWORD')).getOrElse('')
				}
			}
		}
	}
}

signing {
	def signingKey = providers.environmentVariable('SIGNING_KEY').orNull
	def signingPassword = providers.environmentVariable('SIGNING_PASSWORD').orNull
	if (signingKey)
		useInMemoryPgpKeys(signingKey, signingPassword)
	sign publishing.publications.mavenJava
	required {
		gradle.taskGraph.allTasks.any {
			it.name.startsWith('publish') && it.name.endsWith('Repository') && !it.name.contains('MavenLocal')
		}
	}
}

tasks.withType(Sign).configureEach {
	onlyIf {
		gradle.taskGraph.allTasks.any {
			it.name.startsWith('publish') && it.name.endsWith('Repository') && !it.name.contains('MavenLocal')
		}
	}
}

def generatedTestSourcesDir = layout.buildDirectory.dir('generated/test-sources')

test {
	outputs.dir generatedTestSourcesDir
}

tasks.register('compileGeneratedTestSources', JavaCompile) {
	dependsOn test
	source fileTree(generatedTestSourcesDir) {
		include '**/*.java'
	}
	classpath = sourceSets.test.runtimeClasspath
	destinationDirectory = layout.buildDirectory.dir('classes/java/generatedTest')
	if (JavaVersion.current().isJava9Compatible())
		options.release = 8
}

check.dependsOn tasks.named('compileGeneratedTestSources')
